# sp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  workflow.txt
ExtraHW/: funfile.cpp  main.cpp
chapter02/exercises/ex01/: main.cpp
chapter04/online_session/: main.cpp  ptr_and_ref.h  ptr_example_2.h
chapter06/ex01/: main.cpp
chapter06/ex02/: main.cpp  main2.cpp
chapter06/ex03/: main.cpp
chapter06/ex04/: main.cpp
chapter06/ex05/: main.cpp
chapter06/ex06/: main.cpp
chapter06/ex07/: main.cpp
chapter06/ex08/: main.cpp  scores.txt
chapter06/ex09/: contibutor_info.txt  main.cpp
chapter07/ex01/: main.cpp
chapter07/ex02/: main.cpp
chapter07/ex03/: main.cpp
chapter07/ex04/: main.cpp
chapter07/ex05/: main.cpp
chapter07/ex06/: main.cpp
chapter07/ex07/: main.cpp
chapter07/ex08/: version_one.cpp  version_two.cpp
chapter07/ex09/: main.cpp
helper_library/: CMakeLists.txt  common_types.h  helper_functions.h  hw_exercise_headers.h  hw_framework.cpp  hw_framework.h  hw_task_descriptions.h  pointers.h
helper_library/include/: CMakeLists.txt  helper_functions.h  hw_exercise_headers.h  hw_framework.h  hw_task_descriptions.h
helper_library/src/: CMakeLists.txt
hw_tasks/2023-07-23/: forDima.cpp  forLada.cpp  forNadia.cpp
hw_tasks/2023-08-03/: mammoth.cpp  mammoth2.cpp
online_sessions/2023-07-10/: main.cpp
online_sessions/2023-07-12/: main.cpp
online_sessions/2023-07-13/: main.cpp
online_sessions/2023-07-14/: main.cpp
online_sessions/2023-07-17/: main.cpp
online_sessions/2023-07-19/: Person.h  struct.cpp
online_sessions/2023-07-20/: main.cpp
online_sessions/2023-07-24/: main.cpp
online_sessions/2023-07-27/: app.h  client.h  common_types.h  main.cpp  staff.h
online_sessions/2023-08-01/: main.cpp
online_sessions/2023-08-03/: main.cpp
online_sessions/2023-08-06/: main.cpp
online_sessions/2023-08-17/: main.cpp
online_sessions/functions_and_classes/: main.cpp
online_sessions/operators/: main.cpp
online_sessions/templates/: main.cpp
online_sessions/therapy_session/: Patient.h  common_types.h  helper_functions.cpp  helper_functions.h  main.cpp
primer/: CMakeLists.txt  main.cpp
primer/chapter02/: CMakeLists.txt  chapter02.h
primer/chapter10/: CMakeLists.txt
private_playground/lpk_to_mpg/: main.cpp
private_playground/mammoth/: mammoth.cpp
private_playground_for_dino/even_vs_odd_1/: main.cpp
private_playground_for_dino/even_vs_odd_2/: main.cpp
private_playground_for_dino/even_vs_odd_3/: main.cpp
private_playground_for_dino/even_vs_odd_4/: main.cpp
private_playground_for_dino/even_vs_odd_5/: main.cpp
tests/: CMakeLists.txt
zen_of_cpps/: console_commands.txt  function_anatomy.cpp  git_commands.txt  pointers.cpp  pointers.txt  questions_for_self_testing.txt  recommendations.txt  terms_and_concepts.txt  variables_and_references.txt  vscode_keyboard_shortcuts.txt
(+214 files in other folders)
